--- a/package.json
+++ b/package.json
@@ -13,5 +13,18 @@
     "build:dev": "./node_modules/.bin/webpack --mode=development --progress --watch",
     "server": "npx http-server -c -1",
     "prepare": "husky install"
+  },
+  "devDependencies": {
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
+    "prettier": "^2.7.1",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "worker-loader": "^3.0.8"
+  },
+  "dependencies": {
+    "@ar-js-org/artoolkit5-js": "^0.2.0",
+    "aframe": "^1.0.4",
+    "three": "^0.146.0"
   }
 }
